--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-POSTGRES_DB=kittygram
-POSTGRES_USER=kittygram_user
-POSTGRES_PASSWORD=kittygram_password
-DB_NAME=kittygram
+SECRET_KEY=
+ALLOWED_HOSTS=
+DEBUG=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+DB_NAME=
+DB_PORT=
