--- a/tests.yml
+++ b/tests.yml
@@ -1,4 +1,4 @@
 repo_owner: BelovRV89
-kittygram_domain: https://github.com/BelovRV89/kittygram_final
-taski_domain: https://github.com/BelovRV89/taski-docker
+kittygram_domain: https://belovnumber1.ddns.net
+taski_domain: https://belovnumber0.ddns.net
 dockerhub_username: belovrv89
